fix: prevent inconsistent i18n versions caused by SDK cache
- Avoid version drift introduced by repeated `feeds update` on luci snapshots
- Ensure consistent luci-base version to keep i18n package versions aligned
- Fix issue where cached SDK and updated feeds could produce mixed i18n versions

--- a/.github/workflows/build-and-release-aurora-config.yml
+++ b/.github/workflows/build-and-release-aurora-config.yml
@@ -60,6 +60,7 @@ jobs:
 
       - name: Cache SDK
         id: cache
+        if: github.ref_type != 'tag'
         uses: actions/cache@v4
         with:
           path: ${{ env.TMP }}/${{ matrix.target.sdk_dir }}
