feat: implement reset to defaults functionality

--- a/root/usr/share/rpcd/acl.d/luci-app-aurora.json
+++ b/root/usr/share/rpcd/acl.d/luci-app-aurora.json
@@ -25,7 +25,8 @@
           "upload_icon",
           "remove_icon",
           "download_package",
-          "install_package"
+          "install_package",
+          "reset_defaults"
         ],
         "file": ["write", "remove", "exec", "stat"]
       },
