refactor: reorganize color configuration groupings

--- a/root/usr/share/rpcd/acl.d/luci-app-aurora.json
+++ b/root/usr/share/rpcd/acl.d/luci-app-aurora.json
@@ -8,7 +8,8 @@
           "list_icons",
           "get_installed_versions",
           "check_updates",
-          "get_system_info"
+          "get_system_info",
+          "get_theme_config"
         ],
         "file": ["read", "list", "stat"]
       },
