refactor: update Modern Dark theme preset values

--- a/root/usr/share/aurora/modern-dark.template
+++ b/root/usr/share/aurora/modern-dark.template
@@ -35,42 +35,42 @@ config aurora 'theme'
 	option light_success_foreground 'oklch(0.32 0.09 165)'
 	option light_error 'oklch(0.94 0.05 25)'
 	option light_error_foreground 'oklch(0.35 0.12 25)'
-	option dark_background '#0b0d10'
-	option dark_foreground '#e7edf3'
-	option dark_page_bg '#0b0d10'
-	option dark_panel_bg '#151a20'
-	option dark_primary '#4db8ff'
-	option dark_primary_foreground '#0a1620'
-	option dark_border '#242b34'
+	option dark_background 'oklch(0.1448 0.0000 89.876)'
+	option dark_foreground 'oklch(0.9851 0.0000 89.876)'
+	option dark_page_bg 'oklch(0.1448 0.0000 89.876)'
+	option dark_panel_bg 'oklch(0.1776 0.0000 89.876)'
+	option dark_primary 'oklch(0.48 0.118 190.485)'
+	option dark_primary_foreground 'oklch(0.73 0.168 188.745)'
+	option dark_border 'oklch(0.2393 0.0000 89.876)'
 	option dark_header_bg 'oklch(from var(--page-bg) calc(l + 0.02) c h)'
 	option dark_header_interactive 'oklch(from var(--header-bg) calc(l + 0.24) c h)'
-	option dark_progress_bar_start '#2aa7ff'
-	option dark_progress_bar_end '#45e6ff'
-	option dark_terminal_bg '#0a0d12'
-	option dark_terminal_foreground '#f5f7fa'
+	option dark_progress_bar_start 'oklch(0.4318 0.0865 166.91)'
+	option dark_progress_bar_end 'oklch(62.1% 0.145 189.632)'
+	option dark_terminal_bg 'oklch(0.1591 0.0000 89.876)'
+	option dark_terminal_foreground 'oklch(0.9702 0.0000 89.876)'
 	option dark_tooltip_bg 'oklch(from var(--page-bg) calc(l + 0.06) c h)'
-	option dark_overlay_base '#000000'
-	option dark_link '#9a78ff'
-	option dark_input_checked '#ffffff'
+	option dark_overlay_base 'oklch(0 0 0)'
+	option dark_link 'oklch(0.7232 0.1429 265.381)'
+	option dark_input_checked 'oklch(1 0 0)'
 	option dark_label_surface 'oklch(from var(--panel-bg) calc(l + 0.04) c h)'
-	option dark_secondary '#1c232d'
-	option dark_secondary_foreground '#d9e1ea'
-	option dark_destructive '#3b1115'
-	option dark_destructive_foreground '#ffd0d4'
-	option dark_accent '#5b1114'
-	option dark_accent_foreground '#ffd0d4'
-	option dark_muted '#1a1f27'
-	option dark_muted_foreground '#8b98a8'
-	option dark_default 'rgba(27,32,41,0.6)'
-	option dark_default_foreground '#f5f7fa'
-	option dark_info 'rgba(8,40,64,0.6)'
-	option dark_info_foreground '#bfe7ff'
-	option dark_warning 'rgba(66,38,6,0.6)'
-	option dark_warning_foreground '#ffd89a'
-	option dark_success 'rgba(8,54,40,0.6)'
-	option dark_success_foreground '#b8f5d3'
-	option dark_error 'rgba(75,12,30,0.6)'
-	option dark_error_foreground '#ffd0d4'
+	option dark_secondary 'oklch(0.2178 0.0000 89.876)'
+	option dark_secondary_foreground 'oklch(0.9461 0.0000 89.876)'
+	option dark_destructive 'oklch(0.258 0.092 26.042)'
+	option dark_destructive_foreground 'oklch(0.88 0.14 26.042)'
+	option dark_accent 'oklch(0.35 0.12 25)'
+	option dark_accent_foreground 'oklch(0.88 0.14 25)'
+	option dark_muted 'oklch(0.1913 0.0000 89.876)'
+	option dark_muted_foreground 'oklch(0.7090 0.0000 89.876)'
+	option dark_default 'oklch(0.274 0.006 286.033/0.5)'
+	option dark_default_foreground 'oklch(0.985 0.01 285.805)'
+	option dark_info 'oklch(0.391 0.09 240.876/0.5)'
+	option dark_info_foreground 'oklch(0.88 0.06 230)'
+	option dark_warning 'oklch(0.414 0.112 45.904/0.5)'
+	option dark_warning_foreground 'oklch(0.924 0.12 95.746)'
+	option dark_success 'oklch(0.378 0.077 168.94/0.5)'
+	option dark_success_foreground 'oklch(0.92 0.09 160)'
+	option dark_error 'oklch(0.41 0.159 10.272/0.5)'
+	option dark_error_foreground 'oklch(0.88 0.14 25)'
 	option struct_font_sans '"Lato", ui-sans-serif, system-ui, sans-serif'
 	option struct_font_mono 'ui-monospace, "SF Mono", Menlo, Monaco, Consolas, monospace'
 	option struct_spacing '0.25rem'
