refactor: replace Modern Dark preset with Sage Green preset

--- a/root/usr/share/aurora/sage-green.template
+++ b/root/usr/share/aurora/sage-green.template
@@ -1,32 +1,32 @@
 config aurora 'theme'
-	option light_background 'oklch(0.968 0.007 247.896)'
-	option light_foreground 'oklch(0.208 0.042 265.755)'
+	option light_background 'oklch(0.9761 0.0041 91.4461)'
+	option light_foreground 'oklch(0.2417 0.0298 269.8827)'
 	option light_page_bg 'oklch(1 0 0)'
 	option light_panel_bg 'oklch(1 0 0)'
-	option light_primary 'oklch(0.68 0.11 233)'
-	option light_primary_foreground 'oklch(0.6656 0.1055 234.61)'
-	option light_border 'oklch(0.92 0 0)'
+	option light_primary 'oklch(0.6333 0.0309 154.9039)'
+	option light_primary_foreground 'oklch(1 0 0)'
+	option light_border 'oklch(0.9251 0.0071 88.6450)'
 	option light_header_bg 'oklch(from var(--page-bg) calc(l + 0.01) c h)'
 	option light_header_interactive 'oklch(from var(--header-bg) calc(l - 0.12) c h)'
-	option light_progress_bar_start 'oklch(0.68 0.11 233)'
-	option light_progress_bar_end 'oklch(0.7535 0.1034 198.37)'
-	option light_terminal_bg 'oklch(0.24 0.02 260)'
+	option light_progress_bar_start 'oklch(0.6333 0.0309 154.9039)'
+	option light_progress_bar_end 'oklch(0.6744 0.0427 136.0110)'
+	option light_terminal_bg 'oklch(0.2417 0.0298 269.8827)'
 	option light_terminal_foreground 'oklch(1 0 0)'
 	option light_tooltip_bg 'oklch(from var(--page-bg) calc(l - 0.015) c h)'
 	option light_overlay_base 'oklch(0 0 0)'
-	option light_link 'oklch(0.74 0.238 322.16)'
+	option light_link 'oklch(0.6333 0.0309 154.9039)'
 	option light_input_checked 'oklch(1 0 0)'
 	option light_label_surface 'oklch(from var(--panel-bg) calc(l - 0.02) c h)'
-	option light_secondary 'oklch(0.929 0.013 255.508)'
-	option light_secondary_foreground 'oklch(0.372 0.044 257.287)'
-	option light_destructive 'oklch(0.94 0.05 25)'
-	option light_destructive_foreground 'oklch(0.35 0.12 25)'
-	option light_accent 'oklch(0.62 0.22 25)'
-	option light_accent_foreground 'oklch(0.97 0.02 25)'
-	option light_muted 'oklch(0.97 0 0)'
-	option light_muted_foreground 'oklch(0.446 0.043 257.281)'
-	option light_default 'oklch(0.97 0 0)'
-	option light_default_foreground 'oklch(0.205 0 0)'
+	option light_secondary 'oklch(0.8596 0.0291 119.9919)'
+	option light_secondary_foreground 'oklch(0.2417 0.0298 269.8827)'
+	option light_destructive 'oklch(0.5624 0.1743 26.1433)'
+	option light_destructive_foreground 'oklch(1 0 0)'
+	option light_accent 'oklch(0.8242 0.0221 136.6092)'
+	option light_accent_foreground 'oklch(0.2417 0.0298 269.8827)'
+	option light_muted 'oklch(0.9251 0.0071 88.6450)'
+	option light_muted_foreground 'oklch(0.5510 0.0234 264.3637)'
+	option light_default 'oklch(0.9251 0.0071 88.6450)'
+	option light_default_foreground 'oklch(0.2417 0.0298 269.8827)'
 	option light_info 'oklch(0.94 0.05 230)'
 	option light_info_foreground 'oklch(0.35 0.08 240)'
 	option light_warning 'oklch(0.95 0.05 90)'
@@ -35,34 +35,34 @@ config aurora 'theme'
 	option light_success_foreground 'oklch(0.32 0.09 165)'
 	option light_error 'oklch(0.94 0.05 25)'
 	option light_error_foreground 'oklch(0.35 0.12 25)'
-	option dark_background 'oklch(0.1448 0.0000 89.876)'
-	option dark_foreground 'oklch(0.9851 0.0000 89.876)'
-	option dark_page_bg 'oklch(0.1448 0.0000 89.876)'
-	option dark_panel_bg 'oklch(0.1776 0.0000 89.876)'
-	option dark_primary 'oklch(0.48 0.118 190.485)'
-	option dark_primary_foreground 'oklch(0.73 0.168 188.745)'
-	option dark_border 'oklch(0.2393 0.0000 89.876)'
+	option dark_background 'oklch(0.1448 0 0)'
+	option dark_foreground 'oklch(0.9702 0 0)'
+	option dark_page_bg 'oklch(0.1448 0 0)'
+	option dark_panel_bg 'oklch(0.1822 0 0)'
+	option dark_primary 'oklch(0.6333 0.0309 154.9039)'
+	option dark_primary_foreground 'oklch(0 0 0)'
+	option dark_border 'oklch(0.2850 0 0)'
 	option dark_header_bg 'oklch(from var(--page-bg) calc(l + 0.02) c h)'
 	option dark_header_interactive 'oklch(from var(--header-bg) calc(l + 0.24) c h)'
-	option dark_progress_bar_start 'oklch(0.4318 0.0865 166.91)'
-	option dark_progress_bar_end 'oklch(62.1% 0.145 189.632)'
-	option dark_terminal_bg 'oklch(0.1591 0.0000 89.876)'
-	option dark_terminal_foreground 'oklch(0.9702 0.0000 89.876)'
+	option dark_progress_bar_start 'oklch(0.6333 0.0309 154.9039)'
+	option dark_progress_bar_end 'oklch(0.6744 0.0427 136.0110)'
+	option dark_terminal_bg 'oklch(0.1822 0 0)'
+	option dark_terminal_foreground 'oklch(0.9702 0 0)'
 	option dark_tooltip_bg 'oklch(from var(--page-bg) calc(l + 0.06) c h)'
 	option dark_overlay_base 'oklch(0 0 0)'
-	option dark_link 'oklch(0.7232 0.1429 265.381)'
+	option dark_link 'oklch(0.6333 0.0309 154.9039)'
 	option dark_input_checked 'oklch(1 0 0)'
 	option dark_label_surface 'oklch(from var(--panel-bg) calc(l + 0.04) c h)'
-	option dark_secondary 'oklch(0.2178 0.0000 89.876)'
-	option dark_secondary_foreground 'oklch(0.9461 0.0000 89.876)'
-	option dark_destructive 'oklch(0.258 0.092 26.042)'
-	option dark_destructive_foreground 'oklch(0.88 0.14 26.042)'
-	option dark_accent 'oklch(0.35 0.12 25)'
-	option dark_accent_foreground 'oklch(0.88 0.14 25)'
-	option dark_muted 'oklch(0.1913 0.0000 89.876)'
-	option dark_muted_foreground 'oklch(0.7090 0.0000 89.876)'
-	option dark_default 'oklch(0.274 0.006 286.033/0.5)'
-	option dark_default_foreground 'oklch(0.985 0.01 285.805)'
+	option dark_secondary 'oklch(0.2178 0 0)'
+	option dark_secondary_foreground 'oklch(0.9702 0 0)'
+	option dark_destructive 'oklch(0.6368 0.2078 25.3313)'
+	option dark_destructive_foreground 'oklch(1 0 0)'
+	option dark_accent 'oklch(0.3709 0.0248 153.9823)'
+	option dark_accent_foreground 'oklch(0.9702 0 0)'
+	option dark_muted 'oklch(0.2178 0 0)'
+	option dark_muted_foreground 'oklch(0.7058 0 0)'
+	option dark_default 'oklch(0.2178 0 0 / 0.6)'
+	option dark_default_foreground 'oklch(0.9702 0 0)'
 	option dark_info 'oklch(0.391 0.09 240.876/0.5)'
 	option dark_info_foreground 'oklch(0.88 0.06 230)'
 	option dark_warning 'oklch(0.414 0.112 45.904/0.5)'
