refactor(theme): apply primary-foreground to all presets

--- a/root/usr/share/aurora/amber-sand.template
+++ b/root/usr/share/aurora/amber-sand.template
@@ -4,6 +4,7 @@ config aurora 'theme'
 	option light_page_bg 'oklch(0.9818 0.0054 95.0986)'
 	option light_panel_bg 'oklch(0.9818 0.0054 95.0986)'
 	option light_primary 'oklch(0.6171 0.1375 39.0427)'
+	option light_primary_foreground 'oklch(1 0 0)'
 	option light_border 'oklch(0.8847 0.0069 97.3627)'
 	option light_header_bg 'oklch(from var(--page-bg) calc(l + 0.01) c h)'
 	option light_header_interactive 'oklch(from var(--header-bg) calc(l - 0.12) c h)'
@@ -39,6 +40,7 @@ config aurora 'theme'
 	option dark_page_bg 'oklch(0.2679 0.0036 106.6427)'
 	option dark_panel_bg 'oklch(0.3085 0.0035 106.6039)'
 	option dark_primary 'oklch(0.6724 0.1308 38.7559)'
+	option dark_primary_foreground 'oklch(0 0 0)'
 	option dark_border 'oklch(0.3618 0.0101 106.8928)'
 	option dark_header_bg 'oklch(from var(--page-bg) calc(l + 0.02) c h)'
 	option dark_header_interactive 'oklch(from var(--header-bg) calc(l + 0.24) c h)'
