--- a/root/usr/share/aurora/sky-blue.template
+++ b/root/usr/share/aurora/sky-blue.template
@@ -4,6 +4,7 @@ config aurora 'theme'
 	option light_page_bg 'oklch(1 0 0)'
 	option light_panel_bg 'oklch(0.9784 0.0011 197.1387)'
 	option light_primary 'oklch(0.6723 0.1606 244.9955)'
+	option light_primary_foreground 'oklch(1 0 0)'
 	option light_border 'oklch(0.9317 0.0118 231.6594)'
 	option light_header_bg 'oklch(from var(--page-bg) calc(l + 0.01) c h)'
 	option light_header_interactive 'oklch(from var(--header-bg) calc(l - 0.12) c h)'
@@ -39,6 +40,7 @@ config aurora 'theme'
 	option dark_page_bg 'oklch(0 0 0)'
 	option dark_panel_bg 'oklch(0.2097 0.0080 274.5332)'
 	option dark_primary 'oklch(0.6692 0.1607 245.0110)'
+	option dark_primary_foreground 'oklch(1 0 0)'
 	option dark_border 'oklch(0.2674 0.0047 248.0045)'
 	option dark_header_bg 'oklch(from var(--page-bg) calc(l + 0.02) c h)'
 	option dark_header_interactive 'oklch(from var(--header-bg) calc(l + 0.24) c h)'
