--- a/root/usr/share/aurora/classic.template
+++ b/root/usr/share/aurora/classic.template
@@ -4,6 +4,7 @@ config aurora 'theme'
 	option light_page_bg 'oklch(1 0 0)'
 	option light_panel_bg 'oklch(1 0 0)'
 	option light_primary 'oklch(0.68 0.11 233)'
+	option light_primary_foreground 'oklch(1 0 0)'
 	option light_border 'oklch(0.92 0 0)'
 	option light_header_bg 'oklch(from var(--page-bg) calc(l + 0.01) c h)'
 	option light_header_interactive 'oklch(from var(--header-bg) calc(l - 0.12) c h)'
@@ -39,6 +40,7 @@ config aurora 'theme'
 	option dark_page_bg 'oklch(0.21 0.034 264.665)'
 	option dark_panel_bg 'oklch(0.279 0.041 260.031)'
 	option dark_primary 'oklch(0.60 0.13 188.745)'
+	option dark_primary_foreground 'oklch(1 0 0)'
 	option dark_border 'oklch(0.38 0.041 260.031)'
 	option dark_header_bg 'oklch(from var(--page-bg) calc(l + 0.02) c h)'
 	option dark_header_interactive 'oklch(from var(--header-bg) calc(l + 0.24) c h)'
