fix: resolve header color matching background

--- a/root/usr/share/aurora/classic.template
+++ b/root/usr/share/aurora/classic.template
@@ -6,7 +6,7 @@ config aurora 'theme'
 	option light_primary 'oklch(0.68 0.11 233)'
 	option light_primary_foreground 'oklch(1 0 0)'
 	option light_border 'oklch(0.92 0 0)'
-	option light_header_bg 'oklch(from var(--page-bg) calc(l + 0.01) c h)'
+	option light_header_bg 'oklch(from var(--background) l c h)'
 	option light_header_interactive 'oklch(from var(--header-bg) calc(l - 0.12) c h)'
 	option light_progress_bar_start 'oklch(0.68 0.11 233)'
 	option light_progress_bar_end 'oklch(0.7535 0.1034 198.37)'
@@ -42,7 +42,7 @@ config aurora 'theme'
 	option dark_primary 'oklch(0.60 0.13 188.745)'
 	option dark_primary_foreground 'oklch(1 0 0)'
 	option dark_border 'oklch(0.38 0.041 260.031)'
-	option dark_header_bg 'oklch(from var(--page-bg) calc(l + 0.02) c h)'
+	option dark_header_bg 'oklch(from var(--page-bg) l c h)'
 	option dark_header_interactive 'oklch(from var(--header-bg) calc(l + 0.24) c h)'
 	option dark_progress_bar_start 'oklch(0.4318 0.0865 166.91)'
 	option dark_progress_bar_end 'oklch(62.1% 0.145 189.632)'
