--- a/root/usr/share/aurora/sage-green.template
+++ b/root/usr/share/aurora/sage-green.template
@@ -5,7 +5,7 @@ config aurora 'theme'
 	option light_panel_bg 'oklch(1 0 0)'
 	option light_primary 'oklch(0.6333 0.0309 154.9039)'
 	option light_border 'oklch(0.9251 0.0071 88.6450)'
-	option light_header_bg 'oklch(from var(--page-bg) calc(l + 0.01) c h)'
+	option light_header_bg 'oklch(from var(--background) l c h)'
 	option light_header_interactive 'oklch(from var(--header-bg) calc(l - 0.12) c h)'
 	option light_progress_bar_start 'oklch(0.6333 0.0309 154.9039)'
 	option light_progress_bar_end 'oklch(0.6744 0.0427 136.0110)'
@@ -40,7 +40,7 @@ config aurora 'theme'
 	option dark_panel_bg 'oklch(0.1822 0 0)'
 	option dark_primary 'oklch(0.6333 0.0309 154.9039)'
 	option dark_border 'oklch(0.2850 0 0)'
-	option dark_header_bg 'oklch(from var(--page-bg) calc(l + 0.02) c h)'
+	option dark_header_bg 'oklch(from var(--background) l c h)'
 	option dark_header_interactive 'oklch(from var(--header-bg) calc(l + 0.24) c h)'
 	option dark_progress_bar_start 'oklch(0.6333 0.0309 154.9039)'
 	option dark_progress_bar_end 'oklch(0.6744 0.0427 136.0110)'
