--- a/root/usr/share/aurora/amber-sand.template
+++ b/root/usr/share/aurora/amber-sand.template
@@ -6,7 +6,7 @@ config aurora 'theme'
 	option light_primary 'oklch(0.6171 0.1375 39.0427)'
 	option light_primary_foreground 'oklch(1 0 0)'
 	option light_border 'oklch(0.8847 0.0069 97.3627)'
-	option light_header_bg 'oklch(from var(--page-bg) calc(l + 0.01) c h)'
+	option light_header_bg 'oklch(from var(--background) l c h)'
 	option light_header_interactive 'oklch(from var(--header-bg) calc(l - 0.12) c h)'
 	option light_progress_bar_start 'oklch(0.6171 0.1375 39.0427)'
 	option light_progress_bar_end 'oklch(0.5583 0.1276 42.9956)'
@@ -42,7 +42,7 @@ config aurora 'theme'
 	option dark_primary 'oklch(0.6724 0.1308 38.7559)'
 	option dark_primary_foreground 'oklch(0 0 0)'
 	option dark_border 'oklch(0.3618 0.0101 106.8928)'
-	option dark_header_bg 'oklch(from var(--page-bg) calc(l + 0.02) c h)'
+	option dark_header_bg 'oklch(from var(--background) l c h)'
 	option dark_header_interactive 'oklch(from var(--header-bg) calc(l + 0.24) c h)'
 	option dark_progress_bar_start 'oklch(0.6724 0.1308 38.7559)'
 	option dark_progress_bar_end 'oklch(0.5608 0.1348 42.0584)'
