--- a/root/usr/share/aurora/sky-blue.template
+++ b/root/usr/share/aurora/sky-blue.template
@@ -6,7 +6,7 @@ config aurora 'theme'
 	option light_primary 'oklch(0.6723 0.1606 244.9955)'
 	option light_primary_foreground 'oklch(1 0 0)'
 	option light_border 'oklch(0.9317 0.0118 231.6594)'
-	option light_header_bg 'oklch(from var(--page-bg) calc(l + 0.01) c h)'
+	option light_header_bg 'oklch(from var(--background) l c h)'
 	option light_header_interactive 'oklch(from var(--header-bg) calc(l - 0.12) c h)'
 	option light_progress_bar_start 'oklch(0.6723 0.1606 244.9955)'
 	option light_progress_bar_end 'oklch(0.6818 0.1584 243.3540)'
@@ -42,7 +42,7 @@ config aurora 'theme'
 	option dark_primary 'oklch(0.6692 0.1607 245.0110)'
 	option dark_primary_foreground 'oklch(1 0 0)'
 	option dark_border 'oklch(0.2674 0.0047 248.0045)'
-	option dark_header_bg 'oklch(from var(--page-bg) calc(l + 0.02) c h)'
+	option dark_header_bg 'oklch(from var(--background) l c h)'
 	option dark_header_interactive 'oklch(from var(--header-bg) calc(l + 0.24) c h)'
 	option dark_progress_bar_start 'oklch(0.6692 0.1607 245.0110)'
 	option dark_progress_bar_end 'oklch(0.6818 0.1584 243.3540)'
