refactor: refine SAGE_GREEN_TEMPLATE

--- a/root/usr/share/aurora/sage-green.template
+++ b/root/usr/share/aurora/sage-green.template
@@ -4,6 +4,7 @@ config aurora 'theme'
 	option light_page_bg 'oklch(1 0 0)'
 	option light_panel_bg 'oklch(1 0 0)'
 	option light_primary 'oklch(0.6333 0.0309 154.9039)'
+	option light_primary_foreground 'oklch(1 0 0)'
 	option light_border 'oklch(0.9251 0.0071 88.6450)'
 	option light_header_bg 'oklch(from var(--background) l c h)'
 	option light_header_interactive 'oklch(from var(--header-bg) calc(l - 0.12) c h)'
@@ -39,6 +40,7 @@ config aurora 'theme'
 	option dark_page_bg 'oklch(0.1448 0 0)'
 	option dark_panel_bg 'oklch(0.1822 0 0)'
 	option dark_primary 'oklch(0.6333 0.0309 154.9039)'
+	option dark_primary_foreground 'oklch(0 0 0)'
 	option dark_border 'oklch(0.2850 0 0)'
 	option dark_header_bg 'oklch(from var(--background) l c h)'
 	option dark_header_interactive 'oklch(from var(--header-bg) calc(l + 0.24) c h)'
